--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,4 +2,4 @@ steps:
   - id: Sync static web files
     name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:slim'
     entrypoint: gsutil
-    args: ['cp', 'web/*', 'gs://aoe-stats.davidbraden.co.uk/']
+    args: ['cp', '-r', 'web/*', 'gs://aoe-stats.davidbraden.co.uk']
